--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,9 @@
 box: wercker/python
 build:
   steps:
+    - script:
+        name: install apt dependencies
+        code: sudo apt-get install libreadline-dev
     - pip-install
     - script:
         name: flask tests
